Renamed UI file names and layout files

--- a/app/src/main/res/layout/liked_songs_fragment.xml
+++ b/app/src/main/res/layout/liked_songs_fragment.xml
@@ -5,4 +5,4 @@
     android:id="@+id/rv_bookmarked_repos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.BookmarkedReposFragment" />
+    tools:context=".ui.LikedSongsFragment" />
