Renamed UI file names and layout files

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
 <!--     navigate to settings -->
     <fragment
         android:id="@+id/settings"
-        android:name="com.example.githubsearchwithnavigation.ui.SettingsFragment"
+        android:name="com.example.SpotTok.ui.SettingsFragment"
         android:label="@string/label_settings" />
 
 <!--     navigate to "main" page -->
