--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -5,5 +5,5 @@
     android:id="@+id/settings_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.githubsearchwithnavigation.ui.SettingsFragment"
+    android:name="com.example.SpotTok.ui.SettingsFragment"
     tools:context=".ui.SettingsActivity" />
