--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:hint="@string/search_hint"
-        app:startIconDrawable="@drawable/ic_baseline_search_24">
+ls        app:startIconDrawable="@drawable/ic_baseline_search_24">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_search_box"
             android:layout_width="match_parent"
