--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -13,14 +13,14 @@
 <!--     navigate to "main" page -->
     <fragment
         android:id="@+id/main_page"
-        android:name=""
+        android:name="com.example.SpotTok.ui.MainPageFragment"
         android:label="@string/label_main" />
 
 <!--    navigate to liked songs page -->
 <!--    allow user to click on a song to go to the song detail -->
     <fragment
         android:id="@+id/liked_songs"
-        android:name=""
+        android:name="com.example.SpotTok.ui.LikedSongsFragment"
         android:label="@string/label_liked_songs">
         <action
             android:id="@+id/navigate_to_song_detail"
@@ -31,7 +31,7 @@
 <!--     will take in argument for a certain track info (album.albumName, songName) -->
     <fragment
         android:id="@+id/song_detail"
-        android:name=""
+        android:name="com.example.SpotTok.ui.SongDetailFragment"
         android:label="@string/label_detail">
         <argument
             android:name="song"
