--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.example.SpotTok.ui.MainActivity">
+    tools:context="com.example.githubsearchwithnavigation.ui.MainActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
