--- a/app/src/main/res/layout/song_detail_fragment.xml
+++ b/app/src/main/res/layout/song_detail_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RepoDetailActivity">
+    tools:context="com.example.githubsearchwithnavigation.ui.SongDetailFragment">
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loading_indicator"
