--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,36 +7,23 @@
 <!--     navigate to settings -->
     <fragment
         android:id="@+id/settings"
-        android:name="com.example.SpotTok.ui.SettingsFragment"
+        android:name="com.example.githubsearchwithnavigation.ui.SettingsFragment"
         android:label="@string/label_settings" />
 
 <!--     navigate to "main" page -->
     <fragment
         android:id="@+id/main_page"
-        android:name="com.example.SpotTok.ui.MainPageFragment"
+        android:name="com.example.githubsearchwithnavigation.ui.MainPageFragment"
         android:label="@string/label_main" />
 
 <!--    navigate to liked songs page -->
 <!--    allow user to click on a song to go to the song detail -->
     <fragment
         android:id="@+id/liked_songs"
-        android:name="com.example.SpotTok.ui.LikedSongsFragment"
+        android:name="com.example.githubsearchwithnavigation.ui.LikedSongsFragment"
         android:label="@string/label_liked_songs">
-        <action
-            android:id="@+id/navigate_to_song_detail"
-            app:destination="@id/song_detail" />
     </fragment>
 
-<!--     navigate to song detail page-->
-<!--     will take in argument for a certain track info (album.albumName, songName) -->
-    <fragment
-        android:id="@+id/song_detail"
-        android:name="com.example.SpotTok.ui.SongDetailFragment"
-        android:label="@string/label_detail">
-        <argument
-            android:name="song"
-            app:argType="com.example/githubsearchwithnavigation.data.TrackInfo"/>
-    </fragment>
 
 
 </navigation>
