--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -29,9 +29,9 @@
             android:id="@+id/btn_skip_next"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
             app:layout_constraintTop_toBottomOf="@+id/framelayout"
             app:layout_constraintStart_toEndOf="@id/btn_skip_prev"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="@id/btn_skip_prev"
             style="?attr/materialButtonStyle"
             android:text="@string/skip_next" />
@@ -40,10 +40,9 @@
             android:id="@+id/btn_skip_prev"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="60dp"
             app:layout_constraintTop_toBottomOf="@+id/framelayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/btn_skip_prev"
+            app:layout_constraintEnd_toStartOf="@+id/btn_skip_next"
             style="?attr/materialButtonStyle"
             android:text="@string/skip_prev" />
 
@@ -52,11 +51,9 @@
             style="?attr/materialButtonStyle"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
             android:text="@string/like_song"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_skip_prev" />
 
         <TextView
