--- a/app/src/main/res/layout/song_detail_fragment.xml
+++ b/app/src/main/res/layout/song_detail_fragment.xml
@@ -51,21 +51,22 @@
             android:id="@+id/tv_song_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody1" />
-
-        <TextView
-            android:id="@+id/tv_repo_stars"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceHeadline4"
-            app:drawableStartCompat="@drawable/ic_baseline_star_outline_36"
-            android:drawablePadding="8dp" />
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:layout_marginBottom="4dp" />
 
         <Button
-            android:id="@+id/iv_play_button"
+            android:id="@+id/btn_play_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:text="@string/action_play"/>
+
+        <Button
+            android:id="@+id/btn_like_song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/like_song"/>
 
         <SeekBar
             android:id="@+id/iv_song_progress"
