--- a/app/src/main/res/layout/song_detail_fragment.xml
+++ b/app/src/main/res/layout/song_detail_fragment.xml
@@ -36,7 +36,7 @@
             android:id="@+id/tv_song_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceHeadline3"
+            android:textAppearance="?attr/textAppearanceHeadline6"
             android:textAlignment="center"
             android:layout_marginBottom="4dp" />
 
@@ -44,7 +44,7 @@
             android:id="@+id/tv_song_artist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody1"
+            android:textAppearance="?attr/textAppearanceSubtitle2"
             android:textAlignment="center" />
 
         <TextView
@@ -52,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceBody1"
+            android:textAlignment="center"
             android:layout_marginBottom="4dp" />
 
         <Button
