--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -38,13 +38,12 @@
 
         <ImageButton
             android:id="@+id/btn_skip_next"
-            android:layout_width="120dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_skip_next_36"
             app:layout_constraintTop_toBottomOf="@+id/framelayout"
             app:layout_constraintStart_toEndOf="@id/btn_skip_prev"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/btn_skip_prev"
+            app:layout_constraintEnd_toStartOf="@+id/btn_like_song"
             style="?attr/materialButtonStyle"
             android:contentDescription="@string/skip_next" />
 
@@ -60,7 +59,7 @@
 
         <ImageButton
             android:id="@+id/btn_skip_prev"
-            android:layout_width="120dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_skip_previous_36"
             app:layout_constraintTop_toBottomOf="@+id/framelayout"
@@ -69,66 +68,66 @@
             style="?attr/materialButtonStyle"
             android:contentDescription="@string/skip_prev" />
 
-                <Button
-                    android:id="@+id/btn_like_song"
-                    style="?attr/materialButtonStyle"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/like_song"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_skip_prev" />
+        <Button
+            android:id="@+id/btn_like_song"
+            style="?attr/materialButtonStyle"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:text="@string/like_song"
+            app:layout_constraintStart_toEndOf="@+id/btn_skip_next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/framelayout" />
 
-                <TextView
-                    android:id="@+id/tv_song_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?attr/textAppearanceSubtitle1"
-                    android:textColor="?attr/colorError"
-                    app:layout_constraintBottom_toTopOf="@id/tv_song_artist"
-                    app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/tv_song_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="?attr/colorError"
+            app:layout_constraintBottom_toTopOf="@id/tv_song_artist"
+            app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_song_artist"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
-                    android:textColor="?attr/colorError"
-                    android:textAlignment="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_song_title" />
+        <TextView
+            android:id="@+id/tv_song_artist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="?attr/colorError"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_song_title" />
 
-                <FrameLayout
-                    android:id="@+id/framelayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_search_results"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+        <FrameLayout
+            android:id="@+id/framelayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_search_results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-                    <TextView
-                        android:id="@+id/tv_search_error"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:textAppearance="?attr/textAppearanceBody1"
-                        android:textColor="?attr/colorError"
-                        android:visibility="invisible" />
+            <TextView
+                android:id="@+id/tv_search_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="?attr/textAppearanceBody1"
+                android:textColor="?attr/colorError"
+                android:visibility="invisible" />
 
-                    <com.google.android.material.progressindicator.CircularProgressIndicator
-                        android:id="@+id/loading_indicator"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:indeterminate="true"
-                        android:layout_marginTop="32dp"
-                        android:layout_gravity="top|center_horizontal"
-                        android:visibility="invisible" />
-                </FrameLayout>
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/loading_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:layout_marginTop="32dp"
+                android:layout_gravity="top|center_horizontal"
+                android:visibility="invisible" />
+        </FrameLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
+</LinearLayout>
