--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -25,48 +25,53 @@
         android:layout_margin="2dp"
         android:orientation="horizontal">
 
-<!--        <Button-->
-<!--            android:id="@+id/btn_skip_next"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/framelayout"-->
-<!--            app:layout_constraintStart_toEndOf="@id/btn_skip_prev"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintRight_toLeftOf="@id/btn_skip_prev"-->
-<!--            style="?attr/materialButtonStyle"-->
-<!--            android:text="@string/skip_next" />-->
+        <TextView
+            android:id="@+id/tv_song_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:textAlignment="center"
+            android:paddingTop="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_song_artist"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_song_artist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="?attr/colorAccent"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:paddingBottom="50dp"
+            app:layout_constraintBottom_toTopOf="@id/btn_like_song"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_song_title" />
 
         <ImageButton
             android:id="@+id/btn_skip_next"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_skip_next_36"
-            app:layout_constraintTop_toBottomOf="@+id/framelayout"
             app:layout_constraintStart_toEndOf="@id/btn_skip_prev"
             app:layout_constraintEnd_toStartOf="@+id/btn_like_song"
             style="?attr/materialButtonStyle"
-            android:contentDescription="@string/skip_next" />
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_skip_prev"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/framelayout"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/btn_skip_next"-->
-<!--            style="?attr/materialButtonStyle"-->
-<!--            android:text="@string/skip_prev" />-->
+            android:contentDescription="@string/skip_next"
+            app:layout_constraintTop_toBottomOf="@id/tv_song_artist"/>
 
         <ImageButton
             android:id="@+id/btn_skip_prev"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_skip_previous_36"
-            app:layout_constraintTop_toBottomOf="@+id/framelayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_skip_next"
             style="?attr/materialButtonStyle"
-            android:contentDescription="@string/skip_prev" />
+            android:contentDescription="@string/skip_prev"
+            app:layout_constraintTop_toBottomOf="@id/tv_song_artist"/>
 
         <Button
             android:id="@+id/btn_like_song"
@@ -76,27 +81,7 @@
             android:text="@string/like_song"
             app:layout_constraintStart_toEndOf="@+id/btn_skip_next"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/framelayout" />
-
-        <TextView
-            android:id="@+id/tv_song_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceSubtitle1"
-            android:textColor="?attr/colorError"
-            app:layout_constraintBottom_toTopOf="@id/tv_song_artist"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_song_artist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="?attr/colorError"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_song_title" />
+            app:layout_constraintTop_toBottomOf="@id/tv_song_artist" />
 
         <FrameLayout
             android:id="@+id/framelayout"
