--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -7,18 +7,6 @@
     android:orientation="vertical"
     tools:context="com.example.githubsearchwithnavigation.ui.MainActivity">
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:hint="@string/search_hint"-->
-<!--        app:startIconDrawable="@drawable/ic_baseline_search_24">-->
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:id="@+id/et_search_box"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,9 +35,17 @@
             android:textSize="30sp"
             android:textAlignment="center"
             android:paddingBottom="50dp"
-            app:layout_constraintBottom_toTopOf="@id/btn_like_song"
+            app:layout_constraintBottom_toTopOf="@id/trackImg"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_song_title" />
+
+        <ImageView
+            android:id="@+id/trackImg"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_song_artist"
+            app:layout_constraintBottom_toTopOf="@id/btn_like_song" />
 
         <ImageButton
             android:id="@+id/btn_skip_next"
@@ -60,7 +56,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btn_like_song"
             style="?attr/materialButtonStyle"
             android:contentDescription="@string/skip_next"
-            app:layout_constraintTop_toBottomOf="@id/tv_song_artist"/>
+            app:layout_constraintTop_toBottomOf="@id/trackImg"/>
 
         <ImageButton
             android:id="@+id/btn_skip_prev"
@@ -71,7 +67,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btn_skip_next"
             style="?attr/materialButtonStyle"
             android:contentDescription="@string/skip_prev"
-            app:layout_constraintTop_toBottomOf="@id/tv_song_artist"/>
+            app:layout_constraintTop_toBottomOf="@id/trackImg"/>
 
         <Button
             android:id="@+id/btn_like_song"
@@ -81,7 +77,7 @@
             android:text="@string/like_song"
             app:layout_constraintStart_toEndOf="@+id/btn_skip_next"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_song_artist" />
+            app:layout_constraintTop_toBottomOf="@id/trackImg" />
 
         <FrameLayout
             android:id="@+id/framelayout"
